--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="send_reset_password_instructions">Send Reset Password Instructions</string>
     <string name="reset_password">Reset Password</string>
     <string name="enter_username">Enter Username</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="view_profile">View Profile</string>
 
 </resources>
